--- a/MapLog/templates/menu/mypage/by_mood.html
+++ b/MapLog/templates/menu/mypage/by_mood.html
@@ -13,12 +13,12 @@
 {% endblock %} 
 
 {% block content %}
-  <div class="menubar">
+ <div class="menubar">
     <img src="../../static/images/profile_pic.png">
     <div class="menu">
-      <a href="/users/my-page/acc-info">회원 정보</a>
-      <a href="/users/my-page/by-date">날짜별로 모아보기</a>
-      <a class="selected" href="/users/my-page/by-mood">기분별로 모아보기</a>
+      <a href="{% url 'mypage:acc_info' %}">회원 정보</a>
+      <a href="{% url 'mypage:by_date' %}">날짜별로 모아보기</a>
+      <a class="selected" href="{% url 'mypage:by_mood' %}">기분별로 모아보기</a>
     </div>
   </div>
 
